# hcp_for_edp

./: .gitignore  CMakeLists.txt  README.md  main.c  test
Assignment 3/: Jacobi.c  Jacobi.h  Main3.c
assignment01/: benchmark_matriz (1).m  benchmark_matriz.m  codmatriz.py  comp.c  testetrabalho1.c
assignment01/C/: comp.c  main.c  testetrabalho1.c
assignment01/matlab/: benchmark_matriz (1).m  benchmark_matriz.m
assignment01/presentation/: .gitignore  main.tex  template_beamer_basic.aux  template_beamer_basic.tex  template_beamer_basic.vrb
assignment01/python/: codmatriz.py  multiplicador_de_matrizes.py
assignment02/: main.py  numerical_methods.py  plotting_utils.py  stability_analysis.py
assignment02/C-gbispo/: main.c  main2.c  main2getwtime.c  metodos_numericos.c  metodos_numericos.h  montecarlo.c  plotagem.c  plotagem.h  teste
assignment02/PlotCSV/: plotcsv.py
assignment02/euler/: analise.py  main2_parallel.py  main2_serial.py
assignment02/report_assignment02/: main.tex  references.bib
assignment03/: rb_cart_create.py
assignment03/exp_init/: main_jacobi.py
assignment03/gbispo/: jacobi  jacobiellipti.c  paralleljacobiellipti.c  petsctest.c  plot.gp  serialjacobiellipti.c
assignment03/python/: comm_details_0.csv  comm_details_1.csv  comm_details_2.csv  comm_details_3.csv  gauss_seidel_rb.py  jacobi_basic_omega.py  teste.py  (+27 more)
assignment04/: README.md  ex12.c
jobs_to_euler/: iter_parallel.pbs  job_stability_region.pbs  submission_w.job  testpoisson.pbs  weak.pbs
mpi_codes/: Main2.c  acessando_euler.txt  compare_solvers.py  jacobi_gpt.py  main2
(+197 files in other folders)
